--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -27,10 +27,11 @@
     <div class="body-container">
         <h1 class="body-title">The Bookshelf</h1>
         <div class="body-content">
-            <p>Reading is a fun way to experience life and go on an adventure! We all know money compounds, but so does knowledge. I use multi-disciplinary approach to select wide array of books to go on an adventure. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's list and browsing their bookshelves.</p>
+            <p>Reading is a fun way to experience life and go on an adventure! It is important to make time to read what's fairly academic and super profound. We all know money compounds, but so does knowledge. To maintain lifelong curiosity, I use multi-disciplinary approach to select wide array of books. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's list and browsing their bookshelves.</p>
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
             <br>
             <ol>
+                <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/seven-brief-lessons-on-physics.markdown"><strong>Seven Brief Lessons on Physics</strong></a></li><br>
                 <li><a href=""><strong>Poor Charlie's Almanack: The Wit and Wisdom of Charles T. Munger</strong></a></li><br>
                 <li><a href=""><strong>Sapiens: A Brief History of Humankind</strong></a></li><br>
                 <li><a href=""><strong>The Martian</strong></a></li><br>
@@ -140,7 +141,6 @@
                 <li><a href=""><strong>Tools of Titans: The Tactics, Routines, and Habits of Billionaires, Icons, and World-Class Performers</strong></a></li><br>
                 <li><a href=""><strong>A Brief History of Time by Stephen Hawking (1988)</strong></a></li><br>
                 <li><a href=""><strong>Charlie Munger: The Complete Investor (Columbia Business School Publishing)</strong></a></li><br>
-                <li><a href=""><strong>Seven Brief Lessons on Physics</strong></a></li><br>
                 <li><a href=""><strong>The Book of Life: Daily Meditations with Krishnamurti</strong></a></li><br>
                 <li><a href=""><strong>Stories of Your Life and Others</strong></a></li><br>
                 <li><a href=""><strong>Thing Explainer: Complicated Stuff in Simple Words</strong></a></li><br>
