add more products

--- a/pages/product.html
+++ b/pages/product.html
@@ -27,11 +27,13 @@
     <div class="body-container">
         <h1 class="body-title">Product Engineering</h1>
         <div class="body-content">
-            <p>I have been building and launching products for several years now. I find lots of joy in building creative products. Below you will find my past and present product stories.</p>
+            <p>There is a pure joy in building and launching creative products. Following the journey of products has allowed me to learn a lot about various topics. A few failed but the work is still in progress. Below you will find my past and present product stories.</p>
             <br>
             <ol>
             	<li><a href="/products/wise-charlie.html"><strong>Wise Charlie</strong></a></li><br>
+                <li><a href="/products/morningstar-designsystem.html"><strong>Morningstar Design System</strong></a></li><br>
                 <li><a href="/products/humble-pen.html"><strong>Humble Pen</strong></a></li><br>
+                <li><a href="/products/spend-out.html"><strong>Spend Out</strong></a></li><br>
             </ol>
         </div>
     </div>
