--- a/products/morningstar-designsystem.html
+++ b/products/morningstar-designsystem.html
@@ -28,8 +28,7 @@
         <h1 class="h2">Morningstar Design System</h1>
         <div class="body-content">
             <p><strong>In-Progress: </strong>This is an ongoing project to standardize and speed up the process of building digital procuts across Morningstar.</p>
-            <p><strong>Website: </strong></p>
-            <p><iframe src="http://designsystem.morningstar.com/" width="640" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
+            <p><strong>Website: </strong><a href="http://designsystem.morningstar.com/"><strong>http://designsystem.morningstar.com/</strong></a></p>
         </div>
         <br>
         <br>
