--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -27,7 +27,7 @@
     <div class="body-container">
         <h1 class="body-title">The Bookshelf</h1>
         <div class="body-content">
-            <p>Reading is a fun way to experience life and go on an adventure! It is important to make time to read what's fairly academic and super profound. We all know money compounds, but so does knowledge. To maintain lifelong curiosity, I use multi-disciplinary approach to select wide array of books. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's list and browsing their bookshelves.</p>
+            <p>Reading is a fun way to experience life and go on an adventure! It is important to make time to read what's fairly academic and super profound. We all know money compounds, but so does knowledge. To maintain lifelong curiosity, I use multi-disciplinary approach to select wide array of books. This bookshelf represents a complete catalog of books I own and have read. I always enjoy reading other people's list and browsing their bookshelves.</p>
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
             <br>
             <ol>
@@ -169,6 +169,7 @@
                 <li><a href=""><strong>Brave New World</strong></a></li><br>
                 <li><a href=""><strong>Turn the Ship Around!: A True Story of Turning Followers into Leaders</strong></a></li><br>
                 <li><a href=""><strong>Sex at Dawn: How We Mate, Why We Stray, and What it Means for Modern Relationships</strong></a></li><br>
+                <li><a href=""><strong>Deep Work</strong></a></li><br>
             </ol>
         </div>
     </div>
