--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h1 class="body-title body-title-home">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
-            <strong>Software Developer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. I collect mental models. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
-            <p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>.
+            <strong>Software Developer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Building <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>. 
+            <p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>. Process itself is the goal <i class="fa fa-bus"></i>.
             </p>
         </div>
         <h2 class="body-end">- To Adventures & Fellowship!</h2>
