--- a/products/morningstar-designsystem.html
+++ b/products/morningstar-designsystem.html
@@ -27,7 +27,7 @@
     <div class="body-container body-container-override ">
         <h1 class="h2">Morningstar Design System</h1>
         <div class="body-content">
-            <p><strong>In-Progress: </strong>This is an ongoing project to standardize and speed up the process of building digital procuts across Morningstar.</p>
+            <p><strong>In-Progress: </strong>This is an on-going project to standardize and speed up the process of building digital products across Morningstar.</p>
             <p><strong>Website: </strong><a href="http://designsystem.morningstar.com/"><strong>http://designsystem.morningstar.com/</strong></a></p>
         </div>
         <br>
