--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -169,7 +169,7 @@
                 <li><a href=""><strong>Brave New World</strong></a></li><br>
                 <li><a href=""><strong>Turn the Ship Around!: A True Story of Turning Followers into Leaders</strong></a></li><br>
                 <li><a href=""><strong>Sex at Dawn: How We Mate, Why We Stray, and What it Means for Modern Relationships</strong></a></li><br>
-                <li><a href=""><strong>Deep Work</strong></a></li><br>
+                <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/deep-work.markdown"><strong>Deep Work</strong></a></li><br>
             </ol>
         </div>
     </div>
