--- a/pages/writing.html
+++ b/pages/writing.html
@@ -32,11 +32,17 @@
             <ol>
                 <li><a href="/posts/independent-thinking.html"><strong>Independent Thinking</strong></a></li><br>
             </ol>
-            <!-- <ol>
-                <li><a href="/posts/exploration-ourselves.html"><strong>Exploration & Ourselves</strong></a></li><br>
-            </ol>
             <ol>
-                <li><a href="/posts/tribes-mobs.html"><strong>Tribes & Mobs</strong></a></li><br>
+                <li><a href="/posts/tribes-ideologies.html"><strong>Tribes & Ideologies</strong></a></li><br>
+            </ol>
+            <!-- <ol>
+                <li><a href="/posts/exploration-ourselves.html"><strong>Physics, Exploration & Ourselves</strong></a></li><br>
+            </ol> -->
+            <!-- <ol>
+                <li><a href="/posts/humor.html"><strong>Humor</strong></a></li><br>
+            </ol> -->
+            <!-- <ol>
+                <li><a href="/posts/guiding-principle.html"><strong>Guiding Principle</strong></a></li><br>
             </ol> -->
         </div>
     </div>
