--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -32,8 +32,9 @@
             <br>
             <ol>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/seven-brief-lessons-on-physics.markdown"><strong>Seven Brief Lessons on Physics</strong></a></li><br>
+                <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/sapiens-a-brief-history-of-humankind.markdown"><strong>Sapiens: A Brief History of Humankind</strong></a></li><br>
+                <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/deep-work.markdown"><strong>Deep Work</strong></a></li><br>
                 <li><a href=""><strong>Poor Charlie's Almanack: The Wit and Wisdom of Charles T. Munger</strong></a></li><br>
-                <li><a href=""><strong>Sapiens: A Brief History of Humankind</strong></a></li><br>
                 <li><a href=""><strong>The Martian</strong></a></li><br>
                 <li><a href=""><strong>Man's Search for Meaning</strong></a></li><br>
                 <li><a href=""><strong>The Intelligent Investor</strong></a></li><br>
@@ -169,7 +170,6 @@
                 <li><a href=""><strong>Brave New World</strong></a></li><br>
                 <li><a href=""><strong>Turn the Ship Around!: A True Story of Turning Followers into Leaders</strong></a></li><br>
                 <li><a href=""><strong>Sex at Dawn: How We Mate, Why We Stray, and What it Means for Modern Relationships</strong></a></li><br>
-                <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/deep-work.markdown"><strong>Deep Work</strong></a></li><br>
             </ol>
         </div>
     </div>
