--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="body-title body-title-home">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
-            Software developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Building <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>value investing</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>. 
+            Software developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Building <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>investment research</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>. 
             <p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>. Process itself is the goal <i class="fa fa-bus"></i>.
             </p>
         </div>
