--- a/pages/writing.html
+++ b/pages/writing.html
@@ -29,21 +29,13 @@
         <div class="body-content">
             <p>The importance of writing stems from the fact that writing is the primary basis upon which clarity and intellect is enhanced. Writing allows me to express as a person and  promotes me to pose worthwhile questions. Writing ideas down helps me preserve them so that I can reflect upon them later. <i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (foundational basics) are a huge part of my writing.</p>
             <br>
+            <p class="year">2018</p>
             <ol>
                 <li><a href="/posts/independent-thinking.html"><strong>Independent Thinking</strong></a></li><br>
             </ol>
             <ol>
                 <li><a href="/posts/tribes-ideologies.html"><strong>Tribes & Ideologies</strong></a></li><br>
             </ol>
-            <!-- <ol>
-                <li><a href="/posts/exploration-ourselves.html"><strong>Physics, Exploration & Ourselves</strong></a></li><br>
-            </ol> -->
-            <!-- <ol>
-                <li><a href="/posts/humor.html"><strong>Humor</strong></a></li><br>
-            </ol> -->
-            <!-- <ol>
-                <li><a href="/posts/guiding-principle.html"><strong>Guiding Principle</strong></a></li><br>
-            </ol> -->
         </div>
     </div>
     <div class="footer-container">
