--- a/pages/product.html
+++ b/pages/product.html
@@ -27,7 +27,7 @@
     <div class="body-container">
         <h1 class="body-title">Product Engineering</h1>
         <div class="body-content">
-            <p>There is a pure joy in building and launching creative products. Building a product is like planting a seed while experimenting with new ideas. Visual language is a huge part of my product story telling. Following the journey of products has allowed me to learn about many areas — design, code, user experience, writing, ethics, marketing, sales, product prototyping, engineering, manufacturing, supply chain, financing and so much more. A few of my products failed but the lessons learned were invaluable. My work is still in pogress. Below you will find my past and present product stories.</p>
+            <p>There is a pure joy in building and launching creative products. Building a product is like planting a seed while experimenting with new ideas. Visual language is a huge part of my product story telling. Following the journey of product building has allowed me to learn about various topics — design, code, user experience, writing, ethics, marketing, sales, product prototyping, engineering, manufacturing, supply chain, financing and so much more. My work is still in pogress. Below you will find my past and present product stories.</p>
             <br>
             <ol>
             	<li><a href="/products/wise-charlie.html"><strong>Wise Charlie</strong></a></li><br>
