--- a/pages/writing.html
+++ b/pages/writing.html
@@ -27,7 +27,7 @@
     <div class="body-container">
         <h1 class="body-title">Writing</h1>
         <div class="body-content">
-            <p>The importance of writing stems from the fact that writing is the primary basis upon which clarity and intellect is enhanced. Writing allows me to express as a person and  promotes me to pose worthwhile questions. Writing ideas down helps me preserve them so that I can reflect upon them later. <i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (foundational basics) are a huge part of my writing.</p>
+            <p>The importance of writing stems from the fact that it enhances  clarity and intellect. Writing allows me to express as a person and  promotes me to pose worthwhile questions. Writing ideas down helps me preserve them so that I can reflect upon them later. <i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (foundational basics) are a huge part of my writing.</p>
             <br>
             <p class="year">2018</p>
             <ol>
