animation around nav

--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -16,10 +16,10 @@
     <div class="header-container">
         <i class="fa fa-book fa-2x"></i>
         <ul>
-        	<li><a href="/">Home</a></li>
-            <li><a href="./bookshelf">Bookshelf</a></li>
-            <li><a href="./writing">Writing</a></li>
-            <li><a href="./product">Product</a></li>
+        	<li class="flash"><a href="/">Home</a></li>
+            <li class="flash"><a href="./bookshelf">Bookshelf</a></li>
+            <li class="flash"><a href="./writing">Writing</a></li>
+            <li class="flash"><a href="./product">Product</a></li>
         </ul>
     </div>
     <br>
