--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body class="container">
     <div class="header-container">
-        <img class ="telescope" src="./assets/telescope.svg" alt="">
+        <img class="telescope" src="./assets/telescope.svg" alt="">
         <ul>
-        	<li><a href="/">Home</a></li>
-            <li><a href="./pages/bookshelf">Bookshelf</a></li>
-            <li><a href="./pages/writing">Writing</a></li>
-            <li><a href="./pages/product">Product</a></li>
+            <li class="flash"><a href="/">Home</a></li>
+            <li class="flash"><a href="./pages/bookshelf">Bookshelf</a></li>
+            <li class="flash"><a href="./pages/writing">Writing</a></li>
+            <li class="flash"><a href="./pages/product">Product</a></li>
         </ul>
     </div>
     <br>
@@ -28,7 +28,7 @@
         <h1 class="body-title body-title-home">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
-            Software developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Building <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>investment research</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>. 
+            Software developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Building <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>investment research</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
             <p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>. Process itself is the goal <i class="fa fa-bus"></i>.
             </p>
         </div>
