--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </p>
         </div>
         <h2 class="body-end">- To Adventures & Fellowship!</h2>
-        <a href="./pages/writing">
-            <button class="btn" type="text">Writing</button>
+        <a href="https://tinyletter.com/mihirchronicles">
+            <button class="btn" type="text">Newsletter</button>
         </a>
     </div>
     <div class="footer-container">
