--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="header-container">
         <img class="telescope" src="./assets/telescope.svg" alt="">
         <ul>
-            <li class="flash"><a href="/">Home</a></li>
-            <li class="flash"><a href="./pages/bookshelf">Bookshelf</a></li>
-            <li class="flash"><a href="./pages/writing">Writing</a></li>
-            <li class="flash"><a href="./pages/product">Product</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="./pages/bookshelf">Bookshelf</a></li>
+            <li><a href="./pages/writing">Writing</a></li>
+            <li><a href="./pages/product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container">
-        <h1 class="body-title body-title-home">The Mihir Chronicles</h1>
+        <h1 class="body-title body-title-home flash">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
             Software developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Building <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>investment research</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
