--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -16,16 +16,16 @@
     <div class="header-container">
         <i class="fa fa-book fa-2x"></i>
         <ul>
-        	<li class="flash"><a href="/">Home</a></li>
-            <li class="flash"><a href="./bookshelf">Bookshelf</a></li>
-            <li class="flash"><a href="./writing">Writing</a></li>
-            <li class="flash"><a href="./product">Product</a></li>
+        	<li><a href="/">Home</a></li>
+            <li><a href="./bookshelf">Bookshelf</a></li>
+            <li><a href="./writing">Writing</a></li>
+            <li><a href="./product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container">
-        <h1 class="body-title">The Bookshelf</h1>
+        <h1 class="body-title flash">The Bookshelf</h1>
         <div class="body-content">
             <p>Reading is a fun way to experience life and go on an adventure! It is important to make time to read what's fairly academic and super profound. We all know money compounds, but so does knowledge. To maintain lifelong curiosity, I use multi-disciplinary approach to select wide array of books. This bookshelf represents a complete catalog of books I own and/or I have read. Reading other people's list and browsing their bookshelves is a pure joy.</p>
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
