--- a/products/humble-pen.html
+++ b/products/humble-pen.html
@@ -16,16 +16,16 @@
     <div class="header-container">
         <i class="fa fa-cogs fa-2x"></i>
         <ul>
-            <li class="flash"><a href="/">Home</a></li>
-            <li class="flash"><a href="../pages/bookshelf">Bookshelf</a></li>
-            <li class="flash"><a href="../pages/writing">Writing</a></li>
-            <li class="flash"><a href="../pages/product">Product</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="../pages/bookshelf">Bookshelf</a></li>
+            <li><a href="../pages/writing">Writing</a></li>
+            <li><a href="../pages/product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container body-container-override ">
-        <h1 class="h2">Humble Pen</h1>
+        <h1 class="h2 flash">Humble Pen</h1>
         <div class="body-content">
             <p><strong>Story: </strong>The project was inspired during my trip to Haiti in 2012. While searching for meaningful work, I stumbled upon a project which would support education for children in need and reignite one's love for writing. <i>One-for-One Giving</i> business model was fitting. During my trip to Haiti, I asked all the kids at the visiting school in Haiti to write a letter to me. As I read those inspiring letters, it was easy to conclude that kids all around the world are filled with joy, have creative passion and are curious thinkers. A 10-year-old kid wrote to me she aspires to become an astronaut when she grows up. Her letter reminded me there are no limits to dreaming bold, no matter where you are in the world. The project stalled several times during the journey. It was due to my lack of experience in building physical products, lack of knowledge in supply chain and interacting with industrial designers. Eventually, the product launched and it was a success but the project was not sustainable.</p>
             <p><strong>Product: </strong>Humble Pen was a hand-made designer pen made out of bamboo packaged in a beautiful box. Each pen also came with selected artist inspired postcards. For every sale, the product supported educational needs for children in Haiti, India and Cambodia.</p>
