--- a/products/spend-out.html
+++ b/products/spend-out.html
@@ -16,16 +16,16 @@
     <div class="header-container">
         <i class="fa fa-cogs fa-2x"></i>
         <ul>
-            <li class="flash"><a href="/">Home</a></li>
-            <li class="flash"><a href="../pages/bookshelf">Bookshelf</a></li>
-            <li class="flash"><a href="../pages/writing">Writing</a></li>
-            <li class="flash"><a href="../pages/product">Product</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="../pages/bookshelf">Bookshelf</a></li>
+            <li><a href="../pages/writing">Writing</a></li>
+            <li><a href="../pages/product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container body-container-override ">
-        <h1 class="h2">Spend Out</h1>
+        <h1 class="h2 flash">Spend Out</h1>
         <div class="body-content">
             <p><strong>Story: </strong>While working at a design and development shop, Doejo, I was asked to lead a team which would build and launch SpendOut.</p>
             <p><strong>Product: </strong>An expense-tracking tool for users of Uber, Airbnb and similar platforms.</p>
