--- a/pages/writing.html
+++ b/pages/writing.html
@@ -16,16 +16,16 @@
     <div class="header-container">
         <i class="fa fa-pencil fa-2x"></i>
         <ul>
-        	<li class="flash"><a href="/">Home</a></li>
-            <li class="flash"><a href="./bookshelf">Bookshelf</a></li>
-            <li class="flash"><a href="./writing">Writing</a></li>
-            <li class="flash"><a href="./product">Product</a></li>
+        	<li><a href="/">Home</a></li>
+            <li><a href="./bookshelf">Bookshelf</a></li>
+            <li><a href="./writing">Writing</a></li>
+            <li><a href="./product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container">
-        <h1 class="body-title">Writing</h1>
+        <h1 class="body-title flash">Writing</h1>
         <div class="body-content">
             <p>The importance of writing stems from the fact that it enhances  clarity and intellect. Writing allows me to express as a person and  promotes me to pose worthwhile questions. Writing ideas down helps me preserve them so that I can reflect upon them later. <i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (foundational basics) are a huge part of my writing.</p>
             <br>
