--- a/products/morningstar-designsystem.html
+++ b/products/morningstar-designsystem.html
@@ -16,16 +16,16 @@
     <div class="header-container">
         <i class="fa fa-cogs fa-2x"></i>
         <ul>
-            <li class="flash"><a href="/">Home</a></li>
-            <li class="flash"><a href="../pages/bookshelf">Bookshelf</a></li>
-            <li class="flash"><a href="../pages/writing">Writing</a></li>
-            <li class="flash"><a href="../pages/product">Product</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="../pages/bookshelf">Bookshelf</a></li>
+            <li><a href="../pages/writing">Writing</a></li>
+            <li><a href="../pages/product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container body-container-override ">
-        <h1 class="h2">Morningstar Design System</h1>
+        <h1 class="h2 flash">Morningstar Design System</h1>
         <div class="body-content">
             <p><strong>In-Progress: </strong>This is an on-going project to standardize and speed up the process of building digital products across Morningstar.</p>
             <p><strong>Website: </strong><a href="http://designsystem.morningstar.com/"><strong>http://designsystem.morningstar.com/</strong></a></p>
