shoe dog summary

--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -31,6 +31,7 @@
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
             <br>
             <ol>
+                <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/shoe-dog.markdown"><strong>Shoe Dog</strong></a></li><br>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/seven-brief-lessons-on-physics.markdown"><strong>Seven Brief Lessons on Physics</strong></a></li><br>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/sapiens-a-brief-history-of-humankind.markdown"><strong>Sapiens: A Brief History of Humankind</strong></a></li><br>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/deep-work.markdown"><strong>Deep Work</strong></a></li><br>
@@ -59,7 +60,6 @@
                 <li><a href=""><strong>Flash Boys</strong></a></li><br>
                 <li><a href=""><strong>Built to Last</strong></a></li><br>
                 <li><a href=""><strong>Good to Great</strong></a></li><br>
-                <li><a href=""><strong>Phil Knight Shoe Dog</strong></a></li><br>
                 <li><a href=""><strong>Failure is not an Option</strong></a></li><br>
                 <li><a href=""><strong>Predictable Revenue</strong></a></li><br>
                 <li><a href=""><strong>The Phoenix Project</strong></a></li><br>
