--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -178,6 +178,7 @@
             <li><a href="https://twitter.com/mihirchronicles"><i class="fa fa-twitter fa-2x"></i></a></li>
             <li><a href="https://www.linkedin.com/in/mihirchronicles"><i class="fa fa-linkedin fa-2x"></i></a></li>
             <li><a href="https://github.com/mihirchronicles"><i class="fa fa-github fa-2x"></i></a></li>
+            <li><a href="https://instagram.com/mihirchronicles"><i class="fa fa-instagram fa-2x"></i></a></li>
             <li><a href="mailto:mihirptl89@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
         </ul>
     </div>
