--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h1 class="body-title body-title-home flash">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
-            Software developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Building <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>investment research</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong>, <strong>hiking</strong> & <strong>telescopes</strong>.
-            <p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>. Process itself is the goal <i class="fa fa-bus"></i>.
+            Developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Educating via <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>value investing</strong> & <strong>product development</strong>. Fond of <strong>art</strong>, <strong>history</strong>, <strong>hiking</strong> & <strong>telescopes</strong>.
+            <p>Book nerd <i class="fa fa-book"></i>. Enjoy building things <i class="fa fa-paint-brush"></i>. Process itself is the goal <i class="fa fa-cogs"></i>.
             </p>
         </div>
         <h2 class="body-end">- To Adventures & Fellowship!</h2>
