--- a/pages/writing.html
+++ b/pages/writing.html
@@ -36,6 +36,9 @@
             <ol>
                 <li><a href="/posts/tribes-ideologies.html"><strong>Tribes & Ideologies</strong></a></li><br>
             </ol>
+            <ol>
+                <li><a href="/posts/craftsman.html"><strong>Becoming A Craftsman</strong></a></li><br>
+            </ol>
         </div>
     </div>
     <div class="footer-container">
