update files, add robots.txt and update readme

--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -30,11 +30,22 @@
             <p>Reading is a fun way to experience life and go on an adventure! It is important to make time to read what's fairly academic and super profound. We all know money compounds, but so does knowledge. To maintain lifelong curiosity, I use multi-disciplinary approach to select wide array of books. This bookshelf represents a complete catalog of books I own and/or I have read. Reading other people's list and browsing their bookshelves is a pure joy.</p>
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
             <br>
+
+            <p class="year">2018 Summaries</p>
             <ol>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/shoe-dog.markdown"><strong>Shoe Dog</strong></a></li><br>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/seven-brief-lessons-on-physics.markdown"><strong>Seven Brief Lessons on Physics</strong></a></li><br>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/sapiens-a-brief-history-of-humankind.markdown"><strong>Sapiens: A Brief History of Humankind</strong></a></li><br>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/deep-work.markdown"><strong>Deep Work</strong></a></li><br>
+            </ol>
+            <p class="year">No Summaries</p>
+            <ol>
+                <li><a href=""><strong>I Contain Multitudes: The Microbes Within Us and a Grander View of Life</strong></a></li><br>
+                <li><a href=""><strong>The Better Angels of Our Nature: Why Violence Has Declined</strong></a></li><br>
+                <li><a href=""><strong>Living with a SEAL: 31 Days Training with the Toughest Man on the Planet</strong></a></li><br>
+                <li><a href=""><strong>Made to Stick: Why Some Ideas Survive and Others Die</strong></a></li><br>
+                <li><a href=""><strong>The Power of Moments: Why Certain Experiences Have Extraordinary Impact</strong></a></li><br>
+                <li><a href=""><strong>Big Debt Crises</strong></a></li><br>
                 <li><a href=""><strong>Poor Charlie's Almanack: The Wit and Wisdom of Charles T. Munger</strong></a></li><br>
                 <li><a href=""><strong>The Martian</strong></a></li><br>
                 <li><a href=""><strong>Man's Search for Meaning</strong></a></li><br>
