--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>The Mihir Chronicles</title>
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Reenie+Beanie' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Reenie+Beanie' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" type="image/png" href="./favicon.JPG" />
 </head>
 
