tribes essay update and book club

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <h1 class="body-title body-title-home flash">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
-            Developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Educating via <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>value investing</strong> & <strong>product development</strong>. Fond of <strong>art</strong>, <strong>history</strong>, <strong>hiking</strong> & <strong>telescopes</strong>.
+            <p>Developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Educating via <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>value investing</strong> & <strong>product development</strong>. Fond of <strong>art</strong>, <strong>history</strong>, <strong>hiking</strong> & <strong>telescopes</strong>.</p>
             <p>Book nerd <i class="fa fa-book"></i>. Enjoy building things <i class="fa fa-paint-brush"></i>. Process itself is the goal <i class="fa fa-cogs"></i>.
             </p>
         </div>
         <h2 class="body-end">- To Adventures & Fellowship!</h2>
         <a href="https://tinyletter.com/mihirchronicles">
-            <button class="btn" type="text">Newsletter</button>
+            <button class="btn" type="text">Join Book Club!</button>
         </a>
     </div>
     <div class="footer-container">
