--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="./favicon.JPG" />
 </head>
 
-<body class="container">
+<body class="container" id="smooth-scroll">
     <div class="header-container">
         <img class="telescope" src="./assets/telescope.svg" alt="">
         <ul>
@@ -34,7 +34,7 @@
         </div>
         <h2 class="body-end">- To Adventures & Fellowship!</h2>
         <a href="https://tinyletter.com/mihirchronicles">
-            <button class="btn" type="text">Join Book Club!</button>
+            <button class="btn" type="text"><strong>Join Book Club!</strong></button>
         </a>
     </div>
     <div class="footer-container">
@@ -47,22 +47,24 @@
     </div>
     <!-- Google Analytics -->
     <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        const element = document.querySelector("#smooth-scroll");
+        element.scrollIntoView({ behavior: "smooth" });
+        
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-63913047-1', 'auto');
-    ga('send', 'pageview');
+        ga('create', 'UA-63913047-1', 'auto');
+        ga('send', 'pageview');
     </script>
     <!-- &nbsp; 1space -->
 </body>
-
 </html>
