--- a/pages/product.html
+++ b/pages/product.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="../favicon.JPG" />
 </head>
 
-<body class="container">
+<body class="container" id="smooth-scroll">
     <div class="header-container">
         <i class="fa fa-cogs fa-2x"></i>
         <ul>
@@ -27,7 +27,7 @@
     <div class="body-container">
         <h1 class="body-title flash">Product Development</h1>
         <div class="body-content">
-            <p>There is a pure joy in building and launching creative products. Building a product is like planting a seed while experimenting with new ideas. Visual language is a huge part of my product story telling. Following the journey of product building has allowed me to learn about various topics — design, code, user experience, writing, ethics, marketing, sales, product prototyping, engineering, manufacturing, supply chain, financing and so much more. My work is still in pogress. Below you will find my past and present product stories.</p>
+            <p>There is a pure joy in building and launching creative products. Building a product is like planting a seed while experimenting with new ideas. Visual language is a huge part of my product story telling. Following the journey of product building has allowed me to learn about various topics—design, code, user experience, writing, ethics, marketing, sales, product prototyping, engineering, manufacturing, supply chain, financing and so much more. My work is still in pogress. Below you will find my past and present product stories.</p>
             <br>
             <ol>
             	<li><a href="/products/wise-charlie.html"><strong>Wise Charlie</strong></a></li><br>
@@ -47,20 +47,23 @@
     </div>
     <!-- Google Analytics -->
     <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        const element = document.querySelector("#smooth-scroll");
+        element.scrollIntoView({ behavior: "smooth" });
 
-    ga('create', 'UA-63913047-1', 'auto');
-    ga('send', 'pageview');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-63913047-1', 'auto');
+        ga('send', 'pageview');
     </script>
     <!-- &nbsp; 1space -->
 </body>
