--- a/products/morningstar-designsystem.html
+++ b/products/morningstar-designsystem.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="../favicon.JPG" />
 </head>
 
-<body class="container">
+<body class="container" id="smooth-scroll">
     <div class="header-container">
         <i class="fa fa-cogs fa-2x"></i>
         <ul>
@@ -35,20 +35,23 @@
     </div>
     <!-- Google Analytics -->
     <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        const element = document.querySelector("#smooth-scroll");
+        element.scrollIntoView({ behavior: "smooth" });
 
-    ga('create', 'UA-63913047-1', 'auto');
-    ga('send', 'pageview');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-63913047-1', 'auto');
+        ga('send', 'pageview');
     </script>
     <!-- &nbsp; 1space -->
 </body>
