--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -28,6 +28,10 @@
         <h1 class="body-title flash">The Bookshelf</h1>
         <div class="body-content">
             <p>Reading is a fun way to experience life and go on an adventure! It is important to make time to read what's fairly academic and super profound. We all know money compounds, but so does knowledge. To maintain lifelong curiosity, I use multi-disciplinary approach to select wide array of books. This bookshelf represents a complete catalog of books I own and/or I have read. Reading other people's list and browsing their bookshelves is a pure joy. Drop me a note if you have a book recommendation.</p>
+            <p class="year">2019 Summaries</p>
+            <ol>
+                <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/creativity-inc.markdown"><strong>Creativity Inc</strong></a></li><br>
+            </ol>
             <p class="year">2018 Summaries</p>
             <ol>
                 <li><a href="https://github.com/mihirchronicles/book-notes/blob/master/shoe-dog.markdown"><strong>Shoe Dog</strong></a></li><br>
@@ -137,7 +141,6 @@
                 <li><a href=""><strong>American Lion: Andrew Jackson in the White House</strong></a></li><br>
                 <li><a href=""><strong>High Output Management</strong></a></li><br>
                 <li><a href=""><strong>Cathedral of the Wild</strong></a></li><br>
-                <li><a href=""><strong>Creativity Inc</strong></a></li><br>
                 <li><a href=""><strong>Geometry of Design by Kim Elam</strong></a></li><br>
                 <li><a href=""><strong>Elements of Design by Gail Hannah</strong></a></li><br>
                 <li><a href=""><strong>Visual Grammar by Christian Leborg</strong></a></li><br>
@@ -178,6 +181,13 @@
                 <li><a href=""><strong>Brave New World</strong></a></li><br>
                 <li><a href=""><strong>Turn the Ship Around!: A True Story of Turning Followers into Leaders</strong></a></li><br>
                 <li><a href=""><strong>Sex at Dawn: How We Mate, Why We Stray, and What it Means for Modern Relationships</strong></a></li><br>
+                <li><a href=""><strong>The Fifth Risk</strong></a></li><br>
+                <li><a href=""><strong>Lost and Founder: A Painfully Honest Field Guide to the Startup World</strong></a></li><br>
+                <li><a href=""><strong>Crushing It!: How Great Entrepreneurs Build Their Business and Influence-and How You Can, Too</strong></a></li><br>
+                <li><a href=""><strong>The Outsiders: Eight Unconventional CEOs and Their Radically Rational Blueprint for Success</strong></a></li><br>
+                <li><a href=""><strong>Liar's Poker</strong></a></li><br>
+                <li><a href=""><strong>Bad Blood: Secrets and Lies in a Silicon Valley Startup</strong></a></li><br>
+                <li><a href=""><strong>Killing Pablo: The Hunt for the World's Greatest Outlaw</strong></a></li><br>
             </ol>
         </div>
     </div>
