--- a/pages/product.html
+++ b/pages/product.html
@@ -30,7 +30,7 @@
             <p>There is a pure joy in building and launching creative products. Building a product is like planting a seed while experimenting with new ideas. Visual language is a huge part of my product story telling. Following the journey of product building has allowed me to learn about various topics—design, code, user experience, writing, ethics, marketing, sales, product prototyping, engineering, manufacturing, supply chain, financing and so much more. My work is still in pogress. Below you will find my past and present product stories.</p>
             <p class="year">2017 - Current</p>
             <ol>
-            	<li><a href="/products/wise-charlie.html"><strong>Wise Charlie</strong></a></li><br>
+            	<li><a href="/products/wise-charlie.html"><strong>Wise Charlie</strong></a></li>
                 <li><a href="/products/morningstar-designsystem.html"><strong>Morningstar Design System</strong></a></li>
             </ol>
             <p class="year">2015</p>
