--- a/pages/writing.html
+++ b/pages/writing.html
@@ -30,13 +30,13 @@
             <p>The importance of writing stems from the fact that it enhances  clarity and intellect. Writing allows me to express as a person and  promotes me to pose worthwhile questions. Writing ideas down helps me preserve them so that I can reflect upon them later. <i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (foundational basics) are a huge part of my writing.</p>
             <p class="year">2018</p>
             <ol>
-                <li><a href="/posts/independent-thinking.html"><strong>Independent Thinking</strong></a></li><br>
+                <li><a href="/posts/independent-thinking.html"><strong>Independent Thinking</strong></a></li>
             </ol>
             <ol>
-                <li><a href="/posts/tribes-ideologies.html"><strong>Tribes & Ideologies</strong></a></li><br>
+                <li><a href="/posts/tribes-ideologies.html"><strong>Tribes & Ideologies</strong></a></li>
             </ol>
             <ol>
-                <li><a href="/posts/craftsman.html"><strong>Becoming A Craftsman</strong></a></li><br>
+                <li><a href="/posts/craftsman.html"><strong>Becoming A Craftsman</strong></a></li>
             </ol>
         </div>
     </div>
