--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="body-title body-title-home flash">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
-            <p>Developer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Educating via <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about value investing & product development. Fond of art, history, hiking & telescopes.</p>
+            <p>Building products at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong> and <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about investment analysis. Fond of art, history, hiking & telescopes.</p>
             <p>Book nerd <i class="fa fa-book"></i>. Enjoy building things <i class="fa fa-paint-brush"></i>. Process itself is the goal <i class="fa fa-cogs"></i>.
             </p>
         </div>
