--- a/pages/writing.html
+++ b/pages/writing.html
@@ -30,7 +30,7 @@
             <p>The importance of writing stems from the fact that it enhances  clarity and intellect. Writing allows me to express as a person and  promotes me to pose worthwhile questions. Writing ideas down helps me preserve them so that I can reflect upon them later. <i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (foundational basics) are a huge part of my writing.</p>
             <p class="year">2019</p>
             <ol>
-                <li><a href="/posts/metaphorical-thinking.html"><strong>Metaphorical Thinking</strong></a></li>
+                <li><a href="/posts/rhetorical-devices.html"><strong>Rhetorical Devices</strong></a></li>
             </ol>
             <p class="year">2018</p>
             <ol>
