--- a/products/spend-out.html
+++ b/products/spend-out.html
@@ -28,7 +28,7 @@
         <h1 class="h2 flash">Spend Out</h1>
         <div class="body-content">
             <p><strong>Story: </strong>While working at a design and development shop, Doejo, I was asked to lead a team whose responsibility was to build and an expense tracking tool.</p>
-            <p><strong>Product: </strong>An expense-tracking tool for users of Uber, Airbnb and similar sharing economy platforms.</p>
+            <p><strong>Product: </strong>An expense tracking tool for users of Uber, Airbnb and similar sharing economy platforms.</p>
             <p><strong>Results: </strong>We had a few hundred users and were close to signing a deal with Uber Chicago. I eventually left the product team to pursure a career as a developer shortly after. </p> 
             <p><strong>Media: </strong> <a href="http://www.chicagotribune.com/bluesky/originals/81828315-132.html">Chicago Tribune Coverage</a></p>
         </div>
